--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.tstreet.onhand.core.data'
+    namespace 'com.tstreet.onhand.core.network'
     compileSdk 32
 
     defaultConfig {
