--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
+    // 'apply false' syntax used for if you only want to apply plugin in subprojects
+    // i.e. we only resolve the plugin here (find correct version of jar which contains the plugin
+    // and add to script classpath)
+    // We actually apply this specific plugin (executing plugin's Plugin.apply()) in
+    // app/build.gradle (the app module build script) in the plugins { ... } block
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
