--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,26 @@
 buildscript {
+    // TODO: remove compose version from here
     ext {
         compose_ui_version = '1.1.1'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+    buildscript {
+        repositories {
+            google()
+            mavenCentral()
+        }
+    }
+}
 plugins {
     // 'apply false' syntax used for if you only want to apply plugin in subprojects
     // i.e. we only resolve the plugin here (find correct version of jar which contains the plugin
     // and add to script classpath)
     // We actually apply this specific plugin (executing plugin's Plugin.apply()) in
     // app/build.gradle (the app module build script) in the plugins { ... } block
-    id 'com.android.application' version '7.3.1' apply false
-    id 'com.android.library' version '7.3.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
+
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.android.library) apply false
+    alias(libs.plugins.kotlin.android) apply false
+    alias(libs.plugins.kotlin.jvm) apply false
+    // Use the plugin 'kotlin-serialization' as declared in libs version catalog
+    alias(libs.plugins.kotlin.serialization) apply false
 }
