--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -7,6 +7,7 @@ plugins {
     // https://github.com/Kotlin/kotlinx.serialization
     // Applies plugin we aliased in top level project buildscript (OnHand build.gradle)
     id 'kotlinx-serialization'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -46,7 +47,7 @@ dependencies {
     implementation libs.kotlinx.serialization.json
     implementation libs.retrofit.kotlin.serialization
     implementation libs.dagger
-    annotationProcessor libs.dagger.compiler
+    kapt libs.dagger.compiler
 
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
