progress on e2e display fake data from repo, build broken bc repo not injecting to activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ android {
 dependencies {
     // TODO: remove and invert control later...
     implementation project(path: ':core:network')
+    implementation project(path: ':core:data')
+    implementation project(path: ':core:model')
 
     // On implementation vs. api:
     // If you are a library maintainer you should use 'api' for every dependency which is needed for
