--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,9 +35,13 @@ android {
 
 dependencies {
     implementation project(path: ':core:model')
+    implementation project(path: ':core:network')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
+    implementation libs.dagger
+    kapt libs.dagger.compiler
+
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
