app runs with jank inverted multi module setup, need to cleanup and revisit scopes

--- a/feature/ingredientsearch/src/main/AndroidManifest.xml
+++ b/feature/ingredientsearch/src/main/AndroidManifest.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <activity
+            android:name=".IngredientSearchActivity"
+            android:exported="false"
+            android:label="@string/title_activity_ingredient_search"
+            android:theme="@style/Theme.AppCompat">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+    </application>
+
 </manifest>
