--- a/feature/ingredientsearch/build.gradle
+++ b/feature/ingredientsearch/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
@@ -29,10 +29,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 // TODO: extract dependencies into convention plugin and pull into plugins { ... } block
 dependencies {
+    // TODO: Attempt to invert control...this seems wrong.
+    implementation project(path: ':app')
     implementation project(path: ':core:data')
     implementation project(path: ':core:domain')
     implementation project(path: ':core:model')
@@ -46,10 +51,6 @@ dependencies {
     implementation libs.androidx.compose.material
     implementation libs.dagger
     kapt libs.dagger.compiler
-
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     /// TODO: Needed?
     //implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
