--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,8 @@ android {
 }
 
 dependencies {
-    // TODO: remove and invert control later...
-    implementation project(path: ':core:network')
-    implementation project(path: ':core:data')
-    implementation project(path: ':core:model')
+    // TODO: revisit if app module should depend on feature module
+    implementation project(path: ':feature:ingredientsearch')
 
     // On implementation vs. api:
     // If you are a library maintainer you should use 'api' for every dependency which is needed for
@@ -68,8 +66,8 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity.compose
     implementation libs.androidx.compose.ui
-    implementation libs.androidx.compose.ui.tooling.preview
     implementation libs.androidx.compose.material
+    implementation libs.androidx.navigation.compose
     implementation libs.dagger
     kapt libs.dagger.compiler
     /// TODO: Needed?
@@ -81,5 +79,6 @@ dependencies {
     androidTestImplementation libs.androidx.compose.ui.test
 
     debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.tooling.preview
     debugImplementation libs.androidx.compose.ui.test.manifest
 }
