--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
     namespace 'com.tstreet.onhand.core.domain'
-    // TODO: move everything below in android { } to separate build module for less redunancy
+    // TODO: move everything below in android { } to separate build module for less redundancy
     compileSdk 33
 
     defaultConfig {
@@ -32,8 +33,14 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':core:data')
+    implementation project(path: ':core:network')
+    implementation project(path: ':core:model')
+
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
+    implementation libs.dagger
+    kapt libs.dagger.compiler
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
