--- a/feature/ingredientsearch/build.gradle
+++ b/feature/ingredientsearch/build.gradle
@@ -13,6 +13,9 @@ android {
         targetSdk 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -30,15 +33,16 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.1'
     }
 }
 
 // TODO: extract dependencies into convention plugin and pull into plugins { ... } block
 dependencies {
     // TODO: Attempt to invert control...this seems wrong.
-    implementation project(path: ':app')
-    implementation project(path: ':core:data')
     implementation project(path: ':core:domain')
     implementation project(path: ':core:model')
     implementation project(path: ':core:network')
@@ -47,8 +51,9 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity.compose
     implementation libs.androidx.compose.ui
-    implementation libs.androidx.compose.ui.tooling.preview
     implementation libs.androidx.compose.material
+    implementation libs.androidx.navigation.compose
+    implementation libs.androidx.compose.material3
     implementation libs.dagger
     kapt libs.dagger.compiler
 
@@ -61,5 +66,6 @@ dependencies {
     androidTestImplementation libs.androidx.compose.ui.test
 
     debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.tooling.preview
     debugImplementation libs.androidx.compose.ui.test.manifest
 }
