--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,13 @@ android {
 
 dependencies {
     // TODO: revisit if app module should depend on feature module
+    // Feature modules we want to take a dependency on
     implementation project(path: ':feature:ingredientsearch')
+
+    // Core modules we want to be retained for entire Application lifecycle
+    implementation project(path: ':core:data')
+    implementation project(path: ':core:network')
+    implementation project(path: ':core:common')
 
     // On implementation vs. api:
     // If you are a library maintainer you should use 'api' for every dependency which is needed for
