androidx viewModel approach works, but core module dagger graph is recreated for each separate viewmodel. next step is to move core dependencies to singleton (application) scope

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     // TODO: revisit if app module should depend on feature module
     // Feature modules we want to take a dependency on
     implementation project(path: ':feature:ingredientsearch')
+    implementation project(path: ':feature:reciperesult')
 
     // Core modules we want to be retained for entire Application lifecycle
     implementation project(path: ':core:data')
