--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':core:model'
 include ':core:network'
 include ':feature:ingredientsearch'
 include ':core:common'
+include ':feature:reciperesult'
