--- a/feature/reciperesult/build.gradle
+++ b/feature/reciperesult/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    namespace 'com.tstreet.onhand.core.common'
+    namespace 'com.tstreet.onhand.feature.reciperesult'
     compileSdk 33
 
     defaultConfig {
@@ -28,27 +28,41 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        // For DaggerViewModel error:
-        // Inheritance from an interface with '@JvmDefault' members is only allowed with
-        // -Xjvm-default option
-        freeCompilerArgs = ["-Xjvm-default=all"]
     }
     buildFeatures {
         compose true
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.1'
+    }
 }
 
 dependencies {
+    // TODO: Attempt to invert control...this seems wrong.
+    implementation project(path: ':core:domain')
+    implementation project(path: ':core:model')
+    implementation project(path: ':core:data')
+    implementation project(path: ':core:network')
+    implementation project(path: ':core:ui')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity.compose
     implementation libs.androidx.compose.ui
-    implementation libs.androidx.lifecycle.viewModelCompose
-
+    implementation libs.androidx.compose.material
+    implementation libs.androidx.navigation.compose
+    implementation libs.androidx.compose.material3
     implementation libs.dagger
     kapt libs.dagger.compiler
+
+    /// TODO: Needed?
+    //implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
+    androidTestImplementation libs.androidx.compose.ui.test
+
+    debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.tooling.preview
+    debugImplementation libs.androidx.compose.ui.test.manifest
 }
