attempt at inverting control. compiles but does nothing, haven't injected anything into mainactivity bc not sure how to do it without creating circular dep

--- a/feature/reciperesult/build.gradle
+++ b/feature/reciperesult/build.gradle
@@ -38,6 +38,8 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':app')
+
     // TODO: Attempt to invert control...this seems wrong.
     implementation project(path: ':core:domain')
     implementation project(path: ':core:model')
