--- a/feature/ingredientsearch/build.gradle
+++ b/feature/ingredientsearch/build.gradle
@@ -42,12 +42,15 @@ android {
 
 // TODO: extract dependencies into convention plugin and pull into plugins { ... } block
 dependencies {
+    implementation project(path: ':app')
+
     // TODO: Attempt to invert control...this seems wrong.
     implementation project(path: ':core:domain')
     implementation project(path: ':core:model')
     implementation project(path: ':core:data')
     implementation project(path: ':core:network')
     implementation project(path: ':core:ui')
+
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity.compose
