--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -36,7 +36,9 @@ android {
 dependencies {
     implementation project(path: ':core:model')
     implementation project(path: ':core:network')
+    implementation project(path: ':core:common')
 
+    implementation libs.androidx.navigation.compose
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.dagger
