--- a/feature/reciperesult/build.gradle
+++ b/feature/reciperesult/build.gradle
@@ -28,6 +28,10 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        // For DaggerViewModel error:
+        // Inheritance from an interface with '@JvmDefault' members is only allowed with
+        // -Xjvm-default option
+        freeCompilerArgs = ["-Xjvm-default=all"]
     }
     buildFeatures {
         compose true
@@ -44,6 +48,7 @@ dependencies {
     implementation project(path: ':core:data')
     implementation project(path: ':core:network')
     implementation project(path: ':core:ui')
+    implementation project(path: ':core:common')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity.compose
