--- a/settings.gradle
+++ b/settings.gradle
@@ -17,11 +17,12 @@ println 'Executing OnHand settings.gradle - initialization phase.'
 rootProject.name = "OnHand"
 include ':app'
 include ':core'
-include ':core:domain'
 include ':core:data'
 include ':core:ui'
 include ':core:model'
 include ':core:network'
 include ':core:common'
+include ':core:domain'
 include ':feature:ingredientsearch'
-include ':feature:reciperesult'
+include ':feature:recipesearch'
+include ':feature:pantry'
