--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    // https://github.com/Kotlin/kotlinx.serialization
+    // Applies plugin we aliased in top level project buildscript (OnHand build.gradle)
+    id 'kotlinx-serialization'
     id 'kotlin-kapt'
 }
 
@@ -41,6 +44,8 @@ dependencies {
     implementation libs.androidx.navigation.compose
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
+    implementation libs.kotlinx.serialization.json
+    implementation libs.retrofit.kotlin.serialization
     implementation libs.dagger
     kapt libs.dagger.compiler
 
