--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -36,6 +36,9 @@ android {
     buildFeatures {
         compose true
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.4.0-alpha02'
+    }
 }
 
 dependencies {
