--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -1,16 +1,20 @@
 plugins {
+    // TODO: Does referencing via dot notation circumvent declaration for version catalog?
+    // TODO: or is it using the version we declare in top level build script via:
+    // TODO: `alias(libs.plugins.android.library)`?
     id 'com.android.library'
     id 'kotlin-android'
     // https://github.com/Kotlin/kotlinx.serialization
     // Applies plugin we aliased in top level project buildscript (OnHand build.gradle)
-    id 'kotlinx-serialization'
+    //id 'kotlinx-serialization'
     id 'kotlin-kapt'
+    // TODO: change the rest of the plugins in toml to follow this structure
+    alias(libs.plugins.ksp)
 }
 
 android {
-    namespace 'com.tstreet.onhand.core.data'
-
-    // TODO: move everything below in android { } to separate build module for less redunancy
+    namespace 'com.tstreet.onhand.core.database'
+    // TODO: move everything below in android { } to separate build module for less redundancy
     compileSdk 33
 
     defaultConfig {
@@ -19,6 +23,13 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        // TO get around this error:
+        // Schema export directory is not provided to the annotation processor so we cannot export
+        // the schema.
+        ksp {
+            arg("room.schemaLocation", "$projectDir/schemas")
+        }
     }
 
     buildTypes {
@@ -38,21 +49,16 @@ android {
 
 dependencies {
     implementation project(path: ':core:model')
-    implementation project(path: ':core:network')
-    implementation project(path: ':core:database')
-    implementation project(path: ':core:common')
 
-    implementation libs.androidx.navigation.compose
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
-    implementation libs.kotlinx.serialization.json
-    implementation libs.retrofit.kotlin.serialization
     implementation libs.dagger
     kapt libs.dagger.compiler
+    ksp libs.room.compiler
+    implementation libs.room.ktx
+    implementation libs.room.runtime
 
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
 }
-
-println 'Executing core/data build.gradle - configuration phase'
