--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ androidxComposeUi = "1.3.3"
 androidxComposeMaterial = "1.3.1"
 androidxNavigationCompose = '2.5.3'
 androidxLifecycle = "2.6.0-alpha03"
-kotlin = "1.6.10"
+kotlin = "1.7.21"
 retrofit = "2.9.0"
 kotlinxSerializationJson = "1.4.1"
 retrofitKotlinxSerializationJson = "0.8.0"
@@ -20,6 +20,8 @@ androidxTestRules = "1.5.0"
 androidxTestRunner = "1.5.1"
 androidxEspresso = "3.5.0"
 dagger = "2.44.2"
+room = "2.5.0-rc01"
+ksp = "1.7.21-1.0.8"
 
 [libraries]
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
@@ -47,6 +49,9 @@ androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidxTestRunner" }
 dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger"}
 dagger-compiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger"}
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
@@ -56,3 +61,4 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
