--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include ':core:model'
 include ':core:network'
 include ':core:common'
 include ':core:domain'
+include ':core:database'
 include ':feature:ingredientsearch'
 include ':feature:recipesearch'
 include ':feature:pantry'
