fixed recomposition issue for removal from pantry and add/remove from pantry from ingredient search list

--- a/core/model/build.gradle
+++ b/core/model/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
+    implementation libs.androidx.compose.runtime
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
