--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     // Core modules we want to be retained for entire Application lifecycle
     implementation project(path: ':core:data')
     implementation project(path: ':core:common')
+    implementation project(path: ':core:ui')
 
     // On implementation vs. api:
     // If you are a library maintainer you should use 'api' for every dependency which is needed for
@@ -80,7 +81,6 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity.compose
     implementation libs.androidx.compose.ui
-    implementation libs.androidx.compose.material
     implementation libs.androidx.compose.material3
     implementation libs.androidx.navigation.compose
     implementation libs.dagger
