--- a/feature/ingredientsearch/build.gradle
+++ b/feature/ingredientsearch/build.gradle
@@ -56,7 +56,6 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.activity.compose
     implementation libs.androidx.compose.ui
-    implementation libs.androidx.compose.material
     implementation libs.androidx.navigation.compose
     implementation libs.androidx.compose.material3
     implementation libs.dagger
@@ -66,4 +65,8 @@ dependencies {
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
+
+    debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.tooling.preview
+    debugImplementation libs.androidx.compose.ui.test.manifest
 }
