--- a/feature/recipesearch/build.gradle
+++ b/feature/recipesearch/build.gradle
@@ -62,4 +62,8 @@ dependencies {
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
+
+    debugImplementation libs.androidx.compose.ui.tooling
+    debugImplementation libs.androidx.compose.ui.tooling.preview
+    debugImplementation libs.androidx.compose.ui.test.manifest
 }
