verified working e2e against real api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,9 @@ dependencies {
     // TODO: revisit if app module should depend on feature module
     // Feature modules we want to take a dependency on
     implementation project(path: ':feature:ingredientsearch')
-    implementation project(path: ':feature:recipesearch')
     implementation project(path: ':feature:pantry')
+    implementation project(path: ':feature:recipesearch')
+    implementation project(path: ':feature:recipedetail')
 
     // Core modules we want to be retained for entire Application lifecycle
     implementation project(path: ':core:data')
