--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!-- TODO: allowBackup switched to false for development, revisit later -->
+    <!-- TODO: usesCleartextTraffic=true for now, revisit what this is later -->
     <application
         android:name=".OnHandApplication"
         android:allowBackup="false"
@@ -15,6 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OnHand"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
