--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -41,6 +41,8 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':core:model')
+
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.androidx.compose.ui
