--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,6 @@ include ':core:common'
 include ':core:domain'
 include ':core:database'
 include ':feature:ingredientsearch'
-include ':feature:pantry'
+include ':feature:shoppinglist'
 include ':feature:recipesearch'
 include ':feature:recipedetail'
