--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':feature:ingredientsearch'
 include ':feature:shoppinglist'
 include ':feature:recipesearch'
 include ':feature:recipedetail'
+include ':feature:savedrecipes'
