--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -36,6 +36,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+        }
+        debugFake {
+            debuggable true
+            matchingFallbacks = ['debug']
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
