--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -18,6 +18,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+        }
+        debugFake {
+            debuggable true
+            matchingFallbacks = ['debug']
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
