--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -16,6 +16,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+        }
+        debugFake {
+            debuggable true
+            matchingFallbacks = ['debug']
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
