--- a/feature/recipesearch/build.gradle
+++ b/feature/recipesearch/build.gradle
@@ -17,6 +17,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            debuggable true
+        }
+        debugFake {
+            debuggable true
+            matchingFallbacks = ['debug']
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
