fixed networkmodule build config resolution issue

--- a/feature/recipedetail/build.gradle
+++ b/feature/recipedetail/build.gradle
@@ -22,7 +22,7 @@ android {
         }
         debugFake {
             debuggable true
-            matchingFallbacks = ['debug']
+            matchingFallbacks = ['debug', 'debugFake']
         }
         release {
             minifyEnabled false
@@ -70,7 +70,7 @@ dependencies {
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
 
-    debugImplementation libs.androidx.compose.ui.tooling
-    debugImplementation libs.androidx.compose.ui.tooling.preview
-    debugImplementation libs.androidx.compose.ui.test.manifest
+    debugFakeImplementation libs.androidx.compose.ui.tooling
+    debugFakeImplementation libs.androidx.compose.ui.tooling.preview
+    debugFakeImplementation libs.androidx.compose.ui.test.manifest
 }
