--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -26,6 +26,7 @@ android {
     buildTypes {
         debug {
             debuggable true
+            buildConfigField "boolean", "useFakeDataSource", "false"
         }
         debugFake {
             debuggable true
@@ -34,6 +35,7 @@ android {
             matchingFallbacks = ['debug']
         }
         release {
+            buildConfigField "boolean", "useFakeDataSource", "false"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
