--- a/feature/recipesearch/build.gradle
+++ b/feature/recipesearch/build.gradle
@@ -17,9 +17,6 @@ android {
     }
 
     buildTypes {
-        debug {
-            debuggable true
-        }
         debugFake {
             debuggable true
             matchingFallbacks = ['debug']
@@ -70,7 +67,7 @@ dependencies {
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
 
-    debugImplementation libs.androidx.compose.ui.tooling
-    debugImplementation libs.androidx.compose.ui.tooling.preview
-    debugImplementation libs.androidx.compose.ui.test.manifest
+    debugFakeImplementation libs.androidx.compose.ui.tooling
+    debugFakeImplementation libs.androidx.compose.ui.tooling.preview
+    debugFakeImplementation libs.androidx.compose.ui.test.manifest
 }
