--- a/feature/shoppinglist/build.gradle
+++ b/feature/shoppinglist/build.gradle
@@ -20,9 +20,6 @@ android {
     }
 
     buildTypes {
-        debug {
-            debuggable true
-        }
         debugFake {
             debuggable true
             matchingFallbacks = ['debug']
@@ -74,7 +71,7 @@ dependencies {
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
 
-    debugImplementation libs.androidx.compose.ui.tooling
-    debugImplementation libs.androidx.compose.ui.tooling.preview
-    debugImplementation libs.androidx.compose.ui.test.manifest
+    debugFakeImplementation libs.androidx.compose.ui.tooling
+    debugFakeImplementation libs.androidx.compose.ui.tooling.preview
+    debugFakeImplementation libs.androidx.compose.ui.test.manifest
 }
