--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -36,8 +36,11 @@ android {
     }
 
     buildTypes {
-        debugFake {
+        debug {
             debuggable true
+        }
+        mock {
+            initWith(debug)
             matchingFallbacks = ['debug']
         }
         release {
