--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -18,8 +18,11 @@ android {
     }
 
     buildTypes {
-        debugFake {
+        debug {
             debuggable true
+        }
+        mock {
+            initWith(debug)
             matchingFallbacks = ['debug']
         }
         release {
