--- a/feature/recipedetail/build.gradle
+++ b/feature/recipedetail/build.gradle
@@ -17,8 +17,11 @@ android {
     }
 
     buildTypes {
-        debugFake {
+        debug {
             debuggable true
+        }
+        mock {
+            initWith(debug)
             matchingFallbacks = ['debug']
         }
         release {
