--- a/feature/savedrecipes/build.gradle
+++ b/feature/savedrecipes/build.gradle
@@ -20,8 +20,11 @@ android {
     }
 
     buildTypes {
-        debugFake {
+        debug {
             debuggable true
+        }
+        mock {
+            initWith(debug)
             matchingFallbacks = ['debug']
         }
         release {
