--- a/feature/shoppinglist/build.gradle
+++ b/feature/shoppinglist/build.gradle
@@ -20,8 +20,11 @@ android {
     }
 
     buildTypes {
-        debugFake {
+        debug {
             debuggable true
+        }
+        mock {
+            initWith(debug)
             matchingFallbacks = ['debug']
         }
         release {
@@ -71,7 +74,7 @@ dependencies {
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
 
-    debugFakeImplementation libs.androidx.compose.ui.tooling
-    debugFakeImplementation libs.androidx.compose.ui.tooling.preview
-    debugFakeImplementation libs.androidx.compose.ui.test.manifest
+    implementation libs.androidx.compose.ui.tooling
+    implementation libs.androidx.compose.ui.tooling.preview
+    implementation libs.androidx.compose.ui.test.manifest
 }
