use implementation for compose ui tooling preview stuff for now to circumvent matchingFallbacks bug. added note for later

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ android {
             debuggable true
             applicationIdSuffix ".debug"
         }
-        mock {
+        mockDebug {
             initWith(debug)
+            matchingFallbacks = ['debug']
             applicationIdSuffix ".mock"
         }
         release {
