--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -20,7 +20,7 @@ android {
         debug {
             debuggable true
         }
-        mock {
+        mockDebug {
             initWith(debug)
             matchingFallbacks = ['debug']
         }
