--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -25,7 +25,7 @@ android {
         debug {
             debuggable true
         }
-        mock {
+        mockDebug {
             initWith(debug)
             matchingFallbacks = ['debug']
         }
