--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -29,10 +29,10 @@ android {
         debug {
             debuggable true
         }
-        mock {
+        mockDebug {
             initWith(debug)
-            buildConfigField "boolean", "useFakeDataSource", "true"
             matchingFallbacks = ['debug']
+            buildConfigField "boolean", "useFakeDataSource", "true"
         }
         release {
             minifyEnabled false
