--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -39,7 +39,7 @@ android {
         debug {
             debuggable true
         }
-        mock {
+        mockDebug {
             initWith(debug)
             matchingFallbacks = ['debug']
         }
