--- a/core/domain/build.gradle
+++ b/core/domain/build.gradle
@@ -21,7 +21,7 @@ android {
         debug {
             debuggable true
         }
-        mock {
+        mockDebug {
             initWith(debug)
             matchingFallbacks = ['debug']
         }
