--- a/core/ui/build.gradle
+++ b/core/ui/build.gradle
@@ -19,7 +19,7 @@ android {
         debug {
             debuggable true
         }
-        mock {
+        mockDebug {
             initWith(debug)
             matchingFallbacks = ['debug']
         }
@@ -60,6 +60,8 @@ dependencies {
     androidTestImplementation libs.androidx.test.ext
     androidTestImplementation libs.androidx.test.espresso.core
 
+    // TODO: Due to a bug with matchingFallbacks, debugImplementation doesn't work here. Look
+    //  into later. We use implementation to circumvent the bug for now.
     implementation libs.androidx.compose.ui.tooling
     implementation libs.androidx.compose.ui.tooling.preview
     implementation libs.androidx.compose.ui.test.manifest
