--- a/feature/savedrecipes/build.gradle
+++ b/feature/savedrecipes/build.gradle
@@ -23,7 +23,7 @@ android {
         debug {
             debuggable true
         }
-        mock {
+        mockDebug {
             initWith(debug)
             matchingFallbacks = ['debug']
         }
@@ -73,7 +73,9 @@ dependencies {
     androidTestImplementation libs.androidx.test.espresso.core
     androidTestImplementation libs.androidx.compose.ui.test
 
-    debugImplementation libs.androidx.compose.ui.tooling
-    debugImplementation libs.androidx.compose.ui.tooling.preview
-    debugImplementation libs.androidx.compose.ui.test.manifest
+    // TODO: Due to a bug with matchingFallbacks, debugImplementation doesn't work here. Look
+    //  into later. We use implementation to circumvent the bug for now.
+    implementation libs.androidx.compose.ui.tooling
+    implementation libs.androidx.compose.ui.tooling.preview
+    implementation libs.androidx.compose.ui.test.manifest
 }
