--- a/feature/home/build.gradle
+++ b/feature/home/build.gradle
@@ -1,7 +1,5 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    id 'onhand.android.feature'
 }
 
 android {
@@ -49,34 +47,4 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.0'
     }
-}
-
-// TODO: extract dependencies into convention plugin and pull into plugins { ... } block
-dependencies {
-    implementation project(path: ':core:model')
-    implementation project(path: ':core:data')
-    implementation project(path: ':core:network')
-    implementation project(path: ':core:ui')
-    implementation project(path: ':core:common')
-    implementation project(path: ':core:domain')
-
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.activity.compose
-    implementation libs.androidx.compose.ui
-    implementation libs.androidx.navigation.compose
-    implementation libs.androidx.compose.material3
-    implementation libs.androidx.lifecycle.runtime.compose
-    implementation libs.dagger
-    kapt libs.dagger.compiler
-
-    testImplementation libs.junit4
-    androidTestImplementation libs.androidx.test.ext
-    androidTestImplementation libs.androidx.test.espresso.core
-    androidTestImplementation libs.androidx.compose.ui.test
-
-    debugImplementation libs.androidx.compose.ui.tooling
-    debugImplementation libs.androidx.compose.ui.test.manifest
-    // TODO: debugImplementation doesn't work for this dependency for some reason...look
-    //  into later. We use implementation to circumvent the bug for now.
-    implementation libs.androidx.compose.ui.tooling.preview
 }
