--- a/core/database/build.gradle
+++ b/core/database/build.gradle
@@ -1,18 +1,9 @@
 plugins {
-    // TODO: Does referencing via dot notation circumvent declaration for version catalog?
-    // TODO: or is it using the version we declare in top level build script via:
-    // TODO: `alias(libs.plugins.android.library)`?
-    id 'com.android.library'
-    id 'kotlin-android'
-    // https://github.com/Kotlin/kotlinx.serialization
-    // Applies plugin we aliased in top level project buildscript (OnHand build.gradle)
-    //id 'kotlinx-serialization'
-    id 'kotlin-kapt'
-    // TODO: change the rest of the plugins in toml to follow this structure
+    alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.kotlin.kapt)
+    alias(libs.plugins.kotlin.serialization)
     alias(libs.plugins.ksp)
-    // https://github.com/Kotlin/kotlinx.serialization
-    // Applies plugin we aliased in top level project buildscript (OnHand build.gradle)
-    id 'kotlinx-serialization'
 }
 
 android {
@@ -24,7 +15,6 @@ android {
         minSdk 23
         targetSdk 33
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
         // TO get around this error:
