--- a/core/data/build.gradle
+++ b/core/data/build.gradle
@@ -1,10 +1,8 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    // https://github.com/Kotlin/kotlinx.serialization
-    // Applies plugin we aliased in top level project buildscript (OnHand build.gradle)
-    id 'kotlinx-serialization'
-    id 'kotlin-kapt'
+    alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.kotlin.kapt)
+    alias(libs.plugins.kotlin.serialization)
 }
 
 android {
@@ -17,7 +15,6 @@ android {
         minSdk 23
         targetSdk 33
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
