--- a/core/network/build.gradle
+++ b/core/network/build.gradle
@@ -1,13 +1,8 @@
 plugins {
-    // TODO: Does referencing via dot notation circumvent declaration for version catalog?
-    // TODO: or is it using the version we declare in top level build script via:
-    // TODO: `alias(libs.plugins.android.library)`?
-    id 'com.android.library'
-    id 'kotlin-android'
-    // https://github.com/Kotlin/kotlinx.serialization
-    // Applies plugin we aliased in top level project buildscript (OnHand build.gradle)
-    id 'kotlinx-serialization'
-    id 'kotlin-kapt'
+    alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.kotlin.serialization)
+    alias(libs.plugins.kotlin.kapt)
 }
 
 android {
@@ -19,7 +14,6 @@ android {
         minSdk 23
         targetSdk 33
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
         buildConfigField "boolean", "useFakeDataSource", "false"
